--- a/Python_Odoo.ipynb
+++ b/Python_Odoo.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python_Odoo.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHg0AE60ZKmZqH71T5Er4/",
+      "authorship_tag": "ABX9TyNgwPxPnF/nXVjczNnjBOpc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,17 +34,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HdKdRPadfsii"
-      },
-      "source": [
-        "ModuleNotFoundError"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "2XT1oEorfp0p"
@@ -59,15 +48,60 @@
         "id": "FYQoy7PKfdd4"
       },
       "source": [
-        "## BASIC PYTHON"
+        "# Dict\n",
+        "def create(vals):\n",
+        "  if not vals.get('sequence_id'):\n",
+        "    vals.update(\n",
+        "        {'sequence_id':'yaha'}\n",
+        "    )\n",
+        "  return vals"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "W6DWtvuuffZn"
+      },
+      "source": [
+        "x={'nice':'cool'}"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yebYuO3zi1mL",
+        "outputId": "85e34791-118d-44e9-afe4-c75b0feb555d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "create(x)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'nice': 'cool', 'sequence_id': 'yaha'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IbenXI8qi3OU"
       },
       "source": [
         ""
